# orcha01

./: LICENSE  QUICKSTART.md  README.md  demo.py  pyproject.toml  requirements.txt
orcha/: __init__.py  observability.py  orchestrator.py  settings.py
orcha/api/: __init__.py  server.py
orcha/core/: __init__.py  packets.py
orcha/experts/: __init__.py  base.py  local_chat.py  mock.py  ollama.py  registry.py
orcha/orchestration/: __init__.py  aggregator.py  decomposer.py  evaluator.py  executor.py  planner.py  retry.py  selector.py
orcha/ui/: index.html
tests/: test_api.py  test_end_to_end.py  test_orchestration.py  test_packets.py
